<resources>
    <string name="app_name">L3D_CUBE</string>
    <string name="title_math">Math</string>
    <string name="title_gesture">Gesture</string>
    <string name="title_upload">Upload</string>
    <string name="title_display_settings">Display Settings</string>
    <string name="title_app_settings">App Settings</string>

    <string name="MCU">MCU</string>
    <string name="bluetooth_connection">Disconnected</string>
    <string name="bluetooth_settings">bluetooth</string>

    <string name="SMG">SMG</string>
    <string name="SMGConnectionStatus">Disconnected</string>
    <string name="SMGConnect">SMGConnect</string>

    <string name="fillInOn">Fill In On</string>
    <string name="fillInOff">Fill In Off</string>
</resources>