<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_math">

    <fragment
        android:id="@+id/navigation_math"
        android:name="com.example.l3d_cube.ui.MathFragment"
        android:label="@string/title_math"
        tools:layout="@layout/fragment_math" />

    <fragment
        android:id="@+id/navigation_gesture"
        android:name="com.example.l3d_cube.ui.GestureFragment"
        android:label="@string/title_gesture"
        tools:layout="@layout/fragment_gesture" />

    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.example.l3d_cube.ui.UploadFragment"
        android:label="@string/title_upload"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.l3d_cube.ui.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@xml/fragment_settings" />
</navigation>